# RobocupProtocol

./: CMakeLists.txt  README.md  decode_base.cpp  decode_extended.cpp  encode_base.cpp  encode_extended.cpp  example.cpp  robocup.proto  robocup_extension.proto  utils.hpp
